styles/base.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}


/* Page background */
body {
    font-family: 'Calibri', 'Trebuchet MS', sans-serif;
    /* font-family: Arial, Helvetica, sans-serif; */
    /* background-color: #f0f2f5; */
    background-color: #f7f7f7;
    /* light gray-blue */
    margin: 0;
    padding: 2rem 0 0 0;
}

/* Resume container */
.resume-container {
    background: white;
    max-width: 816px;
    width: 100%;
    margin: 0 auto;
    padding: 2rem;
    box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);
    /* border-radius: 8px; */
}

/* Header: name and contact info */
header {
    text-align: center;
    margin-bottom: 1.5rem;
}

header h1 {
    margin-bottom: 0.5rem;
}

header a {
    margin: 0 0.5rem;
    text-decoration: none;
    color: #0073b1;
    font-weight: 500;
}

header a:hover {
    text-decoration: underline;
}

hr {
    height: 4px;
    background-color: #000;
    border: none;
    box-shadow: 0 0 15px rgba(0, 0, 0, 0.15);

}

/* Section headings */
h2 {
    border-top: 1px solid #000;
    border-bottom: 2px solid #000;
    padding-top: 1px;
    padding-bottom: 1px;
    margin-top: 5px;
    margin-bottom: 5px;
    font-size: 1.25rem;
    text-transform: uppercase;
    color: #150E60;
}

.heading-name {
    background-color: #CFE6FF;
}

.education-degree {
    display: grid;
    grid-template-columns: 1fr auto;
    /* row-gap: 0.2rem; */
    margin-bottom: .5rem;
}

.education-school {
    display: grid;
    grid-template-columns: 1fr auto;
    font-size: smaller;
}

.degree-date {
    text-align: right;
    font-size: smaller;
    color: #444;
    white-space: nowrap;
}

.job-header .job-title:first-child {
    margin-top: 20px;
}

.job-header {
    display: grid;
    grid-template-columns: 1fr auto;
    align-items: baseline;
    margin-bottom: 0.3rem;
}

.job-title {
    font-size: 1.1rem;
    font-weight: bold;
}

.job-meta {
    font-size: 0.95rem;
    color: #555;
    margin-bottom: 0.5rem;
}

.job-dates {
    text-align: right;
    white-space: nowrap;
    font-size: smaller;
}

.job-bullets {
    margin-bottom: 1.5rem;
}


/* List spacing */
ul {
    margin-top: 0;
    /* margin-bottom: 1.5rem; */
    padding-left: 1.2rem;
}

ul li {
    margin-bottom: 0.5rem;
    text-wrap: wrap;
}

li::marker {
    font-size: .5em;
}

footer {
    margin: auto;
    max-width: 816px;
    width: 100%;
    background-color: #002d61;
    padding: 1rem 0;
    color: #fff;
    text-align: center;
}

